--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "./dist/index.d.ts",
     "./dist/context.d.ts",
     "./dist/useExperiments.d.ts",
-    "./dist/types.d.ts"
+    "./dist/types.d.ts",
+    "./README.md"
   ],
   "main": "dist/index.js",
   "scripts": {
