--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/react": "^16.0.10",
-    "@types/react-dom": "^16.0.5",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "typescript": "^4.7.4"
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   }
 }
