--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
+    "react": ">=16"
   }
 }
