--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "yandex-metrica-ab-react",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "",
   "homepage": "https://github.com/Firnis/yandex-metrica-ab-react",
   "bugs": {
     "url": "https://github.com/Firnis/yandex-metrica-ab-react/issues"
   },
-  "keywords": ["react", "metrica", "metrika", "yandex", "ab", "varioqub"],
+  "keywords": [
+    "react",
+    "metrica",
+    "metrika",
+    "yandex",
+    "ab",
+    "varioqub"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Firnis/yandex-metrica-ab-react"
